--- a/_layout/page_foot.html
+++ b/_layout/page_foot.html
@@ -3,7 +3,7 @@
         <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> {{ fill author }}
     </p>
     <p align=center>
-        {{ fill fd_mtime }}.{{end}}
+        {{ fill fd_mtime }}
     </p>
     <p align=center>
         <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>
