--- a/_layout/page_foot.html
+++ b/_layout/page_foot.html
@@ -1,6 +1,6 @@
 <div class="page-foot">
     <p align=center>
-        <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> {{ fill author }}
+        <a href="https://yifen9.li">Li Yifeng</a>
     </p>
     <p align=center>
         {{ fill fd_mtime }}
