--- a/_layout/header.html
+++ b/_layout/header.html
@@ -1,9 +1,11 @@
 <header>
-<div class="blog-name"><a href="/"></a>blog.yifen9.li</div>
+<div class="blog-name"><a href="/">blog.yifen9.li</a></div>
 <nav>
   <ul>
-    <li><a href="/">Home</a></li>
+    <li><a href="/archive">Archive</a></li>
+    <li><a href="/tags">Tags</a></li>
     <li><a href="/feed.xml">Feed</a></li>
+    <li><a href="https://github.com/yifen9/blog.yifen9.li">Source</a></li>
   </ul>
   <img src="/assets/hamburger.svg" id="menu-icon">
 </nav>
