--- a/_layout/page_foot.html
+++ b/_layout/page_foot.html
@@ -1,8 +1,8 @@
 <div class="page-foot">
     <p align=center>
-        <a href="https://yifen9.li">About</a>  | 
-        <a href="/feed.xml">Feed</a> | 
-        <a href="https://github.com/yifen9/blog.yifen9.li">Source</a>
+        <a href="https://yifen9.li">Ａｕｔｈｏｒ</a> | 
+        <a href="/feed.xml">Ｆｅｅｄ</a> | 
+        <a href="https://github.com/yifen9/blog.yifen9.li">Ｓｏｕｒｃｅ</a>
     </p>
     <p align=center>
         {{ fill fd_mtime }}
